--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -595,6 +595,9 @@ BudgetPanel.perMonth=Month-wise allocation
 BudgetPanel.perMonth.tooltip=Gets the monthly budget allocation
 BudgetPanel.perYear=Year-wise allocation
 BudgetPanel.perYear.tooltip=Gets the yearly budget allocation
+BudgetPanel.perTransactionDate=Transaction date
+BudgetPanel.perTransactionDate.tooltip=Gets the budget based on transaction date
+BudgetPanel.perValueDate.tooltip=Gets the budget based on transaction value date
 BudgetPanel.averageColumn.checkBox=Average column
 BudgetPanel.averageColumn.checkBox.tooltip=Check this box to add an average column to the table.
 BudgetPanel.sumColumn.checkBox=Total column
