--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -1341,7 +1341,21 @@ LinkEditor.url.tooltip=Enter the destination URL in this field
 
 generic.recommended.with.parenthesis=(recommended)
 
-
-
-
-
+MainMenuBar.predefinedFilters.menu.title=Your filters
+MainMenuBar.predefinedFilters.menu.tooltip=Select this menu to apply a filter you previously saved
+CustomFilterPanel.error.filterNameExists=This button is disabled because there's already a filter named {0}
+CustomFilterPanel.error.filterNameField.title=Save as
+CustomFilterPanel.error.filterNameIsMissing=This button is disabled because you haven't entered a name for this filter
+CustomFilterPanel.save.overwrite.question=There's already a saved filter with this name. Do you want to overwrite it?
+CustomFilterPanel.save.nameField.tooltip=If you wish to save this filter for later use, enter a name here and click the {0} button.
+CustomFilterPanel.save.saveButton.disabled.tooltip=This button is disabled because name is empty
+CustomFilterPanel.save.saveButton.title=Save
+CustomFilterPanel.save.saveButton.tooltip=Click this button to save this filter
+FilterManager.column.name.title=Name
+FilterManager.delete.tooltip=Deletes the selected filter
+FilterManager.duplicates.tooltip=Duplicates the selected filter
+FilterManager.edit.tooltip=Edits the selected filter
+FilterManager.nameField.label=Name\:
+FilterManager.new.tooltip=Creates a new pre-defined filter
+FilterManager.tab.name=This tab allows you to manage the filters you want to save
+FilterManager.tab.tooltip=Filters
