--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,9 @@
 	<properties>
 		<project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
 		<mainClass>net.yapbam.gui.Launcher</mainClass>
-    </properties>
+		<sonar.organization>yapbam</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+	</properties>
 
 	<build>
 		<pluginManagement>
