--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
 	<properties>
 		<project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
 		<mainClass>net.yapbam.gui.Launcher</mainClass>
+		<sonar.organization>yapbam</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
 	<build>
