--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.fathzer</groupId>
@@ -13,35 +14,35 @@
 
 	<build>
 		<pluginManagement>
-		    <plugins>
-		        <plugin>
-		            <groupId>org.eclipse.m2e</groupId>
-		            <artifactId>lifecycle-mapping</artifactId>
-		            <version>1.0.0</version>
-		            <configuration>
-		                <lifecycleMappingMetadata>
-		                    <pluginExecutions>
-		                        <pluginExecution>
-		                            <pluginExecutionFilter>
-		                                <groupId>org.codehaus.mojo</groupId>
-		                                <artifactId>buildnumber-maven-plugin</artifactId>
-		                                <versionRange>[1.2,)</versionRange>
-		                                <goals>
-		                                    <goal>create-timestamp</goal>
-		                                </goals>
-		                            </pluginExecutionFilter>
-		                            <action>
-		                                <execute>
-		                                    <runOnConfiguration>true</runOnConfiguration>
-		                                    <runOnIncremental>true</runOnIncremental>
-		                                </execute>
-		                            </action>
-		                        </pluginExecution>
-		                    </pluginExecutions>
-		                </lifecycleMappingMetadata>
-		            </configuration>
-		        </plugin>
-		    </plugins>
+			<plugins>
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.codehaus.mojo</groupId>
+										<artifactId>buildnumber-maven-plugin</artifactId>
+										<versionRange>[1.2,)</versionRange>
+										<goals>
+											<goal>create-timestamp</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<execute>
+											<runOnConfiguration>true</runOnConfiguration>
+											<runOnIncremental>true</runOnIncremental>
+										</execute>
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
 		</pluginManagement>
 		<sourceDirectory>src</sourceDirectory>
 		<resources>
@@ -53,7 +54,7 @@
 			</resource>
 			<resource>
 				<directory>filteredResources</directory>
-		        <filtering>true</filtering>
+				<filtering>true</filtering>
 			</resource>
 		</resources>
 		<testSourceDirectory>testSrc</testSourceDirectory>
@@ -300,9 +301,9 @@
 			<version>1.1.1</version>
 		</dependency>
 		<dependency>
-		    <groupId>com.alexandriasoftware.swing</groupId>
-		    <artifactId>jsplitbutton</artifactId>
-		    <version>1.3.1</version>
+			<groupId>com.alexandriasoftware.swing</groupId>
+			<artifactId>jsplitbutton</artifactId>
+			<version>1.3.1</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -314,6 +315,12 @@
 			<groupId>com.github.jtidy</groupId>
 			<artifactId>jtidy</artifactId>
 			<version>1.0.2</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.13.0</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
