--- a/pom.xml
+++ b/pom.xml
@@ -323,5 +323,10 @@
 			<version>2.13.0</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.20</version>
+		</dependency>
 	</dependencies>
 </project>
