--- a/pom.xml
+++ b/pom.xml
@@ -252,7 +252,7 @@
 		<dependency>
 			<groupId>com.fathzer</groupId>
 			<artifactId>yapbam-commons</artifactId>
-			<version>1.8.9</version>
+			<version>1.9.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jfree</groupId>
@@ -304,6 +304,11 @@
 			<groupId>com.alexandriasoftware.swing</groupId>
 			<artifactId>jsplitbutton</artifactId>
 			<version>1.3.1</version>
+		</dependency>
+		<dependency>
+		    <groupId>net.java.balloontip</groupId>
+		    <artifactId>balloontip</artifactId>
+		    <version>1.2.4.1</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
