--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -690,6 +690,24 @@ checkbookDialog.finished.createNew=Create a new book
 checkbookDialog.finished.delete=Delete the checkbook
 checkbookDialog.finished.DeleteAndCreateNew=Delete it and create a new book
 
+checkbookAlertsPreferencesDialog.Title=Alert preferences management
+checkbookAlertsPreferencesDialog.Help=<html>Using this window you can choose if you want to be notified when one or more booklets are running out.<br>If this warning is enabled you will see the warning icon appear on the side on the <b>{0}</b> tab\!\!\!</html>
+checkbookAlertsPreferencesDialog.State=Enable alerts:
+checkbookAlertsPreferencesDialog.State.tooltip=Enable or disable checking the amount of checks remaining
+checkbookAlertsPreferencesDialog.Value=Minimum threshold to be notified:
+checkbookAlertsPreferencesDialog.Value.tooltip=Define the threshold below which you would like to receive the alert
+checkbookAlertsPreferencesDialog.error.valueIsBlank=Disabled because the value of threshold is blank
+
+checkbookAlertsWidget.Title=Alert management
+checkbookAlertsWidget.Title.tooltip=Allows you to manage and view alerts raised from your low-end checkbooks
+checkbookAlertsWidget.openPreferencesDialog=Preferences
+checkbookAlertsWidget.openPreferencesDialog.tooltip=Allows you to set some preferences regarding the warnings raised by the program in the case of checkbooks running out
+checkbookAlertsWidget.openAlertTips=Notices
+checkbookAlertsWidget.openAlertTips.tooltip=View current alerts
+checkbookAlertsWidget.openAlertTips.tooltip.disabled=Disabled because there are no alerts at this time
+checkbookAlertsWidget.AlertTips.body=<html>Below are the notices relating to the booklets of the account "{0}":<br><ul>{1}</ul></html>
+checkbookAlertsWidget.AlertTips.body.item=<li>For the \"{0}\" checkbook you have {1} out of {2} checks left</li>
+
 # This dialog is opened when the file to save the data is already existing
 # Dialog message
 saveDialog.FileExist.message=File already exists. Would you like to overwrite it?
