--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -479,6 +479,7 @@ ModeManager.deleteMessage.confirm=Do you really want to delete this payment mode
 ModeManager.deleteMessage.title=Deletion of payment mode in use 
 AdministrationPlugIn.title=Administration
 AdministrationPlugIn.toolTip=Add, delete or edit accounts, categories etc. 
+AdministrationPlugIn.toolTip.checkbookAlert=<html>{0}<br>Warning, one or more accounts are running out of checks</html>
 
 StatisticsPlugin.bar.debts=Expenses
 StatisticsPlugin.bar.empty=No transactions found through the current filter
@@ -697,7 +698,7 @@ checkbookAlertsPreferencesDialog.Value.tooltip=Define the threshold below which 
 checkbookAlertsPreferencesDialog.error.valueIsBlank=Disabled because the value of threshold is invalid
 
 checkbookAlertsWidget.openPreferencesDialog=Alert settings
-checkbookAlertsWidget.openPreferencesDialog.tooltip=Allows set your preferences regarding the warnings raised when checkbooks are running out
+checkbookAlertsWidget.openPreferencesDialog.tooltip=Allows you to set when warning is raised when checkbooks are running out
 
 # This dialog is opened when the file to save the data is already existing
 # Dialog message
